recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:3: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
	 	return Nil
                       ^nth:5: error: type mismatch;
 found   : Int
 required: List[Int]
	     return nth(l.tail.head,n-1)
                               ^