recursion.cons.lessons.recursion.cons.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
	if(l == Nil)
	 	return Nil
	else
	     return nth(l.tail.head,n-1)
}
